--- a/front/src/app/components/requerimento/requerimento.component.html
+++ b/front/src/app/components/requerimento/requerimento.component.html
@@ -1,7 +1,7 @@
 <div class="menu">
     <div class="menu-logo"><img src="../assets/logo.png"></div>
     <div class="menu-links">
-        <div class="menu-link-item">
+        <div *ngIf="login.perfil != 1" class="menu-link-item">
             <a routerLink="/ponto">
                 <span>Novo Ponto</span>
             </a>
@@ -18,10 +18,10 @@
         </div>
         <div class="menu-link-item">
             <a routerLink="/requerimentos">
-                <span>Meus Requerimentos</span>
+                <span>Ver Requerimentos</span>
             </a>
         </div>
-        <div class="menu-link-item">
+        <div *ngIf="login.perfil != 1" class="menu-link-item">
             <a class="this-page" routerLink="/requerimento">
                 <span>Novo Requerimento</span>
             </a>
@@ -70,7 +70,9 @@
             </div>
             <div class="row mt-2">
                 <div class="col">
-                    <textarea placeholder="Escreva se deseja alteração ou remoção do horário, e também a justificativa para a alteração/remoção." name="justificativa" [(ngModel)]="requerimento.justificativa" required></textarea>
+                    <textarea
+                        placeholder="Escreva se deseja alteração ou remoção do horário, e também a justificativa para a alteração/remoção."
+                        name="justificativa" [(ngModel)]="requerimento.justificativa" required></textarea>
                 </div>
             </div>
             <div class="row mt-4">
