--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -17,9 +17,9 @@
             </div>
         </form>
     </mat-card-content>
-    <mat-card-content>
+    <!--<mat-card-content>
         <div class="b-recover">
             Esqueceu sua senha?<a [routerLink]="['/cadastro-usuario']" mat-button>Redefinir</a>
         </div>
-    </mat-card-content>
+    </mat-card-content>-->
 </mat-card>
