--- a/front/src/app/components/ponto/ponto.component.scss
+++ b/front/src/app/components/ponto/ponto.component.scss
@@ -26,6 +26,7 @@ mat-form-field{
 .inner-sidebar-card-task {
     color: #443a3a;
     font-size: 1.1rem;
+    font-style: italic;
 }
 
 .inner-sidebar-message {
