--- a/front/src/app/components/pontos/pontos.component.html
+++ b/front/src/app/components/pontos/pontos.component.html
@@ -51,7 +51,7 @@
                     <mat-card-title>Todos os registros</mat-card-title>
                 </div>
                 <div class="col">
-                    <select name="usuarios" [(ngModel)]="usuarioSelecionado" (change)="getPontos()">
+                    <select name="usuarios" [(ngModel)]="usuarioSelecionado" (change)="getPontos()" class="float-right">
                         <option *ngFor="let u of usuarios" [ngValue]="u">{{ u.nome }}</option>
                     </select>
                 </div>
@@ -61,9 +61,11 @@
                     'longDate'}}</div>
                 <div class="register-card mb-4">
                     <div class="row">
-                        <div class="col">
+                        <div class="col edit-time">
                             <div *ngIf="!p.edit" class="register-card-time">{{ p.data | date: 'HH:mm'}}</div>
                             <div *ngIf="p.edit"><input [(ngModel)]="p.data"></div>
+                            <div *ngIf="p.edit"><a mat-icon-button (click)="delete(i)" class="float-right blue-icon"><mat-icon>check</mat-icon></a></div>
+                            <div *ngIf="p.edit"><a mat-icon-button (click)="delete(i)" class="float-right blue-icon"><mat-icon>clear</mat-icon></a></div>
                         </div>
                         <div class="col">
                             <a mat-icon-button (click)="delete(i)" class="float-right">
