--- a/front/src/app/components/requerimentos/requerimentos.component.html
+++ b/front/src/app/components/requerimentos/requerimentos.component.html
@@ -48,7 +48,7 @@
         <div class="ml-5 mr-5">
             <div class="row mt-5 mb-4">
                 <div class="col">
-                    <mat-card-title>Meus requerimentos</mat-card-title>
+                    <mat-card-title>Todos os requerimentos</mat-card-title>
                 </div>
             </div>
             <div class="request-grid">
