--- a/front/src/app/components/banco/banco.component.html
+++ b/front/src/app/components/banco/banco.component.html
@@ -43,17 +43,6 @@
         </div>
     </div>
 </div>
-<!--<div class="main-content-full">
-    <div *ngIf="relatorio">
-        <p>Saldo Total: {{ relatorio.saldoString }}</p>
-        <div style="border: 3px; border-style: double;" *ngFor="let p of relatorio.pontos">
-            <div class="inner-sidebar-date">Entrada: {{ p.entrada | date: 'HH:mm:ss'}}</div>
-            <div class="inner-sidebar-date">Saída: {{ p.saida | date: 'HH:mm:ss'}}</div>
-            <div class="inner-sidebar-date">Jornada: {{ p.jornadaString }}</div>
-            <div class="inner-sidebar-date">Tarefa: {{ p.tarefas }}</div>
-        </div>
-    </div>
-</div>-->
 <div class="main-content-full">
     <mat-card>
         <div *ngIf="relatorio" class="ml-5 mr-5">
@@ -62,9 +51,12 @@
                     <mat-card-title>Saldo total: <span>{{ relatorio.saldoString }}</span></mat-card-title>
                 </div>
                 <div class="col">
-                    <!--<select name="usuarios" [(ngModel)]="usuarioSelecionado" (change)="getPontos()" class="float-right">
+                    <mat-card-title>Pagamento: <span>{{ relatorio.pagamento | currency: "BRL" }}</span></mat-card-title>
+                </div>
+                <div *ngIf="login.perfil == 1" class="col">
+                    <select name="usuarios" [(ngModel)]="usuarioSelecionado" (change)="getPontos()" class="float-right">
                         <option *ngFor="let u of usuarios" [ngValue]="u">{{ u.nome }}</option>
-                    </select>-->
+                    </select>
                 </div>
             </div>
             <div *ngFor="let p of relatorio.pontos" class="report-card mb-4">
