--- a/front/src/app/components/pontos/pontos.component.html
+++ b/front/src/app/components/pontos/pontos.component.html
@@ -57,16 +57,26 @@
                 </div>
             </div>
             <div *ngFor="let p of pontos; let i = index">
-                <div *ngIf="i == 0 || pontos[i-1].data.getDay() !== p.data.getDay()" class="register-date mb-3">{{
-                    p.data | date:
-                    'longDate'}}</div>
+                <div *ngIf="i == 0 || pontos[i-1].data.getDay() !== p.data.getDay()" class="register-date mb-3">
+                    {{ p.data | date: 'longDate'}}
+                </div>
                 <div class="register-card mb-4">
                     <div class="row">
                         <div class="col edit-time">
                             <div *ngIf="!p.edit" class="register-card-time">{{ p.data | date: 'HH:mm'}}</div>
-                            <div *ngIf="p.edit"><input [(ngModel)]="p.data"></div>
-                            <div *ngIf="p.edit"><a mat-icon-button (click)="delete(i)" class="float-right blue-icon"><mat-icon>check</mat-icon></a></div>
-                            <div *ngIf="p.edit"><a mat-icon-button (click)="delete(i)" class="float-right blue-icon"><mat-icon>clear</mat-icon></a></div>
+                            <div *ngIf="p.edit">
+                                <input [(ngModel)]="hora" mask="hh:mm" [dropSpecialCharacters]="false">
+                            </div>
+                            <div *ngIf="p.edit">
+                                <a mat-icon-button (click)="update(p.id)" class="float-right blue-icon">
+                                    <mat-icon>check</mat-icon>
+                                </a>
+                            </div>
+                            <div *ngIf="p.edit">
+                                <a mat-icon-button (click)="p.edit = 0" class="float-right blue-icon">
+                                    <mat-icon>clear</mat-icon>
+                                </a>
+                            </div>
                         </div>
                         <div *ngIf="login.perfil == 1" class="col">
                             <a mat-icon-button (click)="delete(p.id)" class="float-right">
