--- a/front/src/app/components/usuario/usuario.component.html
+++ b/front/src/app/components/usuario/usuario.component.html
@@ -87,6 +87,15 @@
                                         [(ngModel)]="usuario.cpf" required>
                                 </mat-form-field>
                             </div>
+                            <div class="col-3">
+                                <mat-form-field>
+                                    <mat-label>Salário Hora</mat-label>
+                                    <input [disabled]="login.perfil != 1" type="number" matInput
+                                        [dropSpecialCharacters]="false" mask="00.00" placeholder="Salário hora"
+                                        name="salarioHora" min="00.00" max="99.99" [(ngModel)]="usuario.salarioHora"
+                                        required>
+                                </mat-form-field>
+                            </div>
                         </div>
                         <div class="row" *ngIf="!usuario.id">
                             <div class="col-4">
