--- a/front/src/app/components/cadastro-usuario/cadastro-usuario.component.html
+++ b/front/src/app/components/cadastro-usuario/cadastro-usuario.component.html
@@ -48,7 +48,7 @@
         <div class="ml-5">
             <div class="row mt-5 mb-4">
                 <div class="col">
-                    <mat-card-title>Cadastrar novo usuário</mat-card-title>
+                    <mat-card-title>Dados do usuário:</mat-card-title>
                 </div>
             </div>
             <div class="row">
