--- a/front/src/app/components/usuarios/usuarios.component.scss
+++ b/front/src/app/components/usuarios/usuarios.component.scss
@@ -44,6 +44,10 @@ table, a {
     text-decoration: none;
 }
 
+a.mat-icon-button:hover {
+    color: #23b6ca !important;
+}
+
 .loading-shade {
     background-color: rgba(255, 255, 255, 0.5);
 }
